<resources>
    <string name="app_name">Firebase</string>
    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your Email</string>
    <string name="login_subtitle">Login to continue using the app</string>
    <string name="register_subtitle">Put your Email and password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_subtitle">Put your email address to reset your password</string>
    <string name="forgot_button">Reset</string>
    <string name="password_hint">Enter your Email</string>

</resources>